--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ install:
   - luarocks install luafilesystem
   - luarocks install dkjson
   - luarocks install lualogging
+  - luarocks install lua_cliargs
   - luarocks build rocks/lpack-master-1.rockspec
   - luarocks build rocks/lua-websockets-master-1.rockspec
   - export $(luarocks path | tr "'" ";")
