--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,6 @@ install:
   - make bootstrap
   - cd ..
   - export PATH=${PATH}:${HOME}/bin
-  - luarocks install copastimer
   - luarocks install serpent
   - luarocks install luafilesystem
   - luarocks install dkjson
@@ -25,6 +24,7 @@ install:
   - luarocks install lua_cliargs
   - luarocks build rocks/lpack-master-1.rockspec
   - luarocks build rocks/lua-websockets-master-1.rockspec
+  - luarocks build rocks/lua-ev-master-1.rockspec
   - export $(luarocks path | tr "'" ";")
 
 script:
